Fix: Sync z remote + nasze poprawki
- 04_optimization_best_practices: Notebook niezależny (własne ładowanie danych)
- 04_unity_catalog_governance: RLS fix - zmiana z country na state
  (dane mają country='USA', więc RLS używa state: NY/CA/FL/etc)
  Grupy: east-coast-team, west-coast-team, midwest-team

--- a/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
@@ -217,9 +217,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Definicja tabel do optymalizacji:**\n",
+    "## Sekcja 0: Przygotowanie danych\n",
     "\n",
-    "Założenie: notebook `01_delta_lake_operations.ipynb` został już wykonany."
+    "Ten notebook jest **w pełni niezależny** - sam ładuje dane źródłowe i tworzy tabele potrzebne do demo optymalizacji."
    ]
   },
   {
@@ -228,15 +228,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CUSTOMERS_DELTA = f\"{BRONZE_SCHEMA}.customers_delta\"\n",
-    "ORDERS_DELTA = f\"{BRONZE_SCHEMA}.orders_delta\""
+    "# Ścieżki do danych źródłowych\n",
+    "CUSTOMERS_CSV = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
+    "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "PRODUCTS_PARQUET = f\"{DATASET_BASE_PATH}/products/products.parquet\"\n",
+    "\n",
+    "# Nazwy tabel (unikalne dla tego notebooka)\n",
+    "ORDERS_OPT = f\"{BRONZE_SCHEMA}.orders_optimization\"\n",
+    "CUSTOMERS_OPT = f\"{BRONZE_SCHEMA}.customers_optimization\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Weryfikacja nazw tabel:**"
+    "**Wczytanie danych źródłowych:**"
    ]
   },
   {
@@ -245,12 +251,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(\n",
-    "    spark.createDataFrame([\n",
-    "        (\"CUSTOMERS_DELTA\", CUSTOMERS_DELTA),\n",
-    "        (\"ORDERS_DELTA\", ORDERS_DELTA)\n",
-    "    ], [\"Table\", \"Full Name\"])\n",
-    ")"
+    "# Wczytaj customers\n",
+    "customers_df = spark.read \\\n",
+    "    .option(\"header\", \"true\") \\\n",
+    "    .option(\"inferSchema\", \"true\") \\\n",
+    "    .csv(CUSTOMERS_CSV)\n",
+    "\n",
+    "# Wczytaj orders\n",
+    "orders_df = spark.read.json(ORDERS_JSON)\n",
+    "\n",
+    "# Dodaj kolumnę order_date (data bez czasu) dla partycjonowania\n",
+    "orders_df = orders_df.withColumn(\n",
+    "    \"order_date\", \n",
+    "    F.to_date(F.col(\"order_datetime\"))\n",
+    ")\n",
+    "\n",
+    "print(f\"✓ Customers: {customers_df.count()} rekordów\")\n",
+    "print(f\"✓ Orders: {orders_df.count()} rekordów\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Zapisz jako tabele Delta do optymalizacji:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zapisz jako tabele Delta\n",
+    "customers_df.write \\\n",
+    "    .format(\"delta\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .saveAsTable(CUSTOMERS_OPT)\n",
+    "\n",
+    "orders_df.write \\\n",
+    "    .format(\"delta\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .saveAsTable(ORDERS_OPT)\n",
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"CUSTOMERS_OPT\", CUSTOMERS_OPT, str(customers_df.count())),\n",
+    "    (\"ORDERS_OPT\", ORDERS_OPT, str(orders_df.count()))\n",
+    "], [\"Tabela\", \"Full Name\", \"Rekordy\"]))"
    ]
   },
   {
@@ -326,12 +373,9 @@
    "source": [
     "# Przykład 1.1 - Analiza planu prostego zapytania\n",
     "\n",
-    "# Użyj tabeli customers_delta utworzonej w 01_delta_lake_operations.ipynb\n",
-    "# CUSTOMERS_DELTA jest już zdefiniowany w sekcji Konfiguracja\n",
-    "\n",
     "simple_query = spark.sql(f\"\"\"\n",
     "    SELECT customer_id, first_name, last_name, customer_segment, city\n",
-    "    FROM {CUSTOMERS_DELTA}\n",
+    "    FROM {CUSTOMERS_OPT}\n",
     "    WHERE customer_segment = 'Premium'\n",
     "    ORDER BY customer_id DESC\n",
     "    LIMIT 10\n",
@@ -411,12 +455,9 @@
    "source": [
     "# Przykład 1.2 - Predicate Pushdown\n",
     "\n",
-    "# Użyj tabeli orders_delta utworzonej w 01_delta_lake_operations.ipynb\n",
-    "# ORDERS_DELTA jest już zdefiniowany w sekcji Konfiguracja\n",
-    "\n",
     "filtered_query = spark.sql(f\"\"\"\n",
     "    SELECT order_id, customer_id, total_amount, order_date\n",
-    "    FROM {ORDERS_DELTA}\n",
+    "    FROM {ORDERS_OPT}\n",
     "    WHERE total_amount > 100 \n",
     "    AND order_date >= '2024-01-01'\n",
     "\"\"\")"
@@ -521,7 +562,7 @@
     "# Przykład 2.1 - Tworzenie tabeli partycjonowanej\n",
     "\n",
     "# Utwórz tabelę partycjonowaną według roku i miesiąca\n",
-    "ORDERS_PARTITIONED = f\"{BRONZE_SCHEMA}.orders_partitioned\"\n",
+    "ORDERS_PARTITIONED = f\"{BRONZE_SCHEMA}.orders_opt_partitioned\"\n",
     "\n",
     "# Dodaj kolumny do partycjonowania\n",
     "orders_with_partitions = spark.sql(f\"\"\"\n",
@@ -529,7 +570,7 @@
     "        *,\n",
     "        YEAR(order_date) as year,\n",
     "        MONTH(order_date) as month\n",
-    "    FROM {ORDERS_DELTA}\n",
+    "    FROM {ORDERS_OPT}\n",
     "\"\"\")"
    ]
   },
@@ -899,6 +940,59 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 3.3: VACUUM - Usuwanie starych plików\n",
+    "\n",
+    "**Teoria:**\n",
+    "VACUUM usuwa stare pliki, które nie są już potrzebne (po operacjach DELETE, UPDATE, MERGE, OPTIMIZE). \n",
+    "Domyślnie Delta Lake zachowuje pliki przez 7 dni (168 godzin) dla Time Travel.\n",
+    "\n",
+    "**⚠️ Uwaga:** Po VACUUM nie można używać Time Travel do wersji wcześniejszych niż retention period!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sprawdź ile plików można usunąć (DRY RUN)\n",
+    "spark.sql(f\"VACUUM {SMALL_FILES_TABLE} DRY RUN\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Wykonaj VACUUM (usuń stare pliki):**\n",
+    "\n",
+    "> **Uwaga:** W produkcji używaj domyślnego retention (7 dni). Poniższy kod z `RETAIN 0 HOURS` jest tylko do demo!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wykonaj VACUUM - usuń stare pliki\n",
+    "# W środowisku demo wyłączamy sprawdzenie retention\n",
+    "spark.conf.set(\"spark.databricks.delta.retentionDurationCheck.enabled\", \"false\")\n",
+    "\n",
+    "# VACUUM z krótkim retention (TYLKO DO DEMO!)\n",
+    "spark.sql(\"\"\"\n",
+    "    VACUUM orders_opt RETAIN 1 HOURS\n",
+    "\"\"\")\n",
+    "\n",
+    "# Przywróć domyślne ustawienie\n",
+    "spark.conf.set(\"spark.databricks.delta.retentionDurationCheck.enabled\", \"true\")\n",
+    "\n",
+    "print(\"✅ VACUUM wykonany - stare pliki usunięte\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -973,7 +1067,7 @@
    "source": [
     "# Wykonaj ZORDER BY na najczęściej filtrowanych kolumnach\n",
     "spark.sql(f\"\"\"\n",
-    "    OPTIMIZE {ORDERS_DELTA}\n",
+    "    OPTIMIZE {ORDERS_OPT}\n",
     "    ZORDER BY (customer_id, order_date)\n",
     "\"\"\")"
    ]
@@ -1020,11 +1114,12 @@
     "import time\n",
     "\n",
     "# Zapytanie wykorzystujące kolumny z ZORDER\n",
+    "# customer_id to STRING (np. CUST000123), order_date to DATE\n",
     "test_query = spark.sql(f\"\"\"\n",
-    "    SELECT COUNT(*), AVG(total_amount)\n",
-    "    FROM {ORDERS_DELTA}\n",
-    "    WHERE customer_id BETWEEN 100 AND 200\n",
-    "    AND order_date >= '2024-01-01'\n",
+    "    SELECT COUNT(*) as cnt, AVG(total_amount) as avg_amount\n",
+    "    FROM {ORDERS_OPT}\n",
+    "    WHERE customer_id BETWEEN 'CUST000100' AND 'CUST000500'\n",
+    "    AND order_date >= '2024-06-01'\n",
     "\"\"\")"
    ]
   },
@@ -1107,13 +1202,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LIQUID_TABLE = f\"{BRONZE_SCHEMA}.orders_liquid\"\n",
+    "LIQUID_TABLE = f\"{BRONZE_SCHEMA}.orders_opt_liquid\"\n",
     "\n",
     "# Tworzymy tabelę używając CLUSTER BY zamiast PARTITIONED BY\n",
     "spark.sql(f\"\"\"\n",
     "CREATE OR REPLACE TABLE {LIQUID_TABLE}\n",
     "CLUSTER BY (customer_id, order_date)\n",
-    "AS SELECT * FROM {ORDERS_DELTA}\n",
+    "AS SELECT * FROM {ORDERS_OPT}\n",
     "\"\"\")"
    ]
   },
@@ -1384,17 +1479,19 @@
    },
    "outputs": [],
    "source": [
-    "# Cleanup - usuń tabele demo\n",
+    "# Cleanup - usuń tabele demo utworzone w tym notebooku\n",
     "\n",
     "# Odkomentuj poniższe linie aby usunąć tabele demo:\n",
     "\n",
+    "# spark.sql(f\"DROP TABLE IF EXISTS {ORDERS_OPT}\")\n",
+    "# spark.sql(f\"DROP TABLE IF EXISTS {CUSTOMERS_OPT}\")\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {ORDERS_PARTITIONED}\")\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {SMALL_FILES_TABLE}\")\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {LIQUID_TABLE}\")\n",
     "\n",
-    "# print(\"✓ Tabele demo usunięte\")\n",
+    "# print(\"✅ Wszystkie tabele demo usunięte\")\n",
     "\n",
-    "print(\"Cleanup wyłączony (odkomentuj kod aby usunąć tabele demo)\")"
+    "print(\"ℹ️ Cleanup wyłączony (odkomentuj kod aby usunąć tabele demo)\")"
    ]
   }
  ],
