--- a/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
@@ -2442,9 +2442,9 @@
     "\n",
     "Row-Level Security filtruje dane bazując na group membership:\n",
     "- **global-access**: Widzi wszystkich klientów\n",
-    "- **poland-team**: Tylko klientów z Polski \n",
-    "- **germany-team**: Tylko klientów z Niemiec\n",
-    "- **france-team**: Tylko klientów z Francji\n",
+    "- **east-coast-team**: Tylko klientów z NY, NJ, NC, GA \n",
+    "- **west-coast-team**: Tylko klientów z CA\n",
+    "- **midwest-team**: Tylko klientów z FL, IL, TX, MI\n",
     "- **Inne grupy**: Brak dostępu (FALSE)\n",
     "\n",
     "Automatyczne filtrowanie wierszy bez duplikowania danych."
@@ -2468,7 +2468,7 @@
    },
    "outputs": [],
    "source": [
-    "# Tworzenie RLS view - dostęp per kraj\n",
+    "# Tworzenie RLS view - dostęp per region (state)\n",
     "spark.sql(f\"\"\"\n",
     "    CREATE OR REPLACE VIEW {CATALOG}.{GOLD_SCHEMA}.customers_rls AS\n",
     "    SELECT *\n",
@@ -2476,9 +2476,9 @@
     "    WHERE \n",
     "        CASE \n",
     "            WHEN is_account_group_member('global-access') THEN TRUE\n",
-    "            WHEN is_account_group_member('poland-team') THEN country = 'Poland'\n",
-    "            WHEN is_account_group_member('germany-team') THEN country = 'Germany'\n",
-    "            WHEN is_account_group_member('france-team') THEN country = 'France'\n",
+    "            WHEN is_account_group_member('east-coast-team') THEN UPPER(state) IN ('NY', 'NJ', 'NC', 'GA')\n",
+    "            WHEN is_account_group_member('west-coast-team') THEN UPPER(state) = 'CA'\n",
+    "            WHEN is_account_group_member('midwest-team') THEN UPPER(state) IN ('FL', 'IL', 'TX', 'MI')\n",
     "            ELSE FALSE\n",
     "        END\n",
     "\"\"\")\n"
@@ -2504,11 +2504,11 @@
    "source": [
     "display(spark.createDataFrame([\n",
     "    (\"RLS View\", f\"{CATALOG}.{GOLD_SCHEMA}.customers_rls\"),\n",
-    "    (\"Mechanizm\", \"Filtrowanie per country based on group membership\"),\n",
+    "    (\"Mechanizm\", \"Filtrowanie per state based on group membership\"),\n",
     "    (\"global-access\", \"Wszyscy klienci\"),\n",
-    "    (\"poland-team\", \"Tylko Poland\"),\n",
-    "    (\"germany-team\", \"Tylko Germany\"),\n",
-    "    (\"france-team\", \"Tylko France\")\n",
+    "    (\"east-coast-team\", \"NY, NJ, NC, GA\"),\n",
+    "    (\"west-coast-team\", \"CA\"),\n",
+    "    (\"midwest-team\", \"FL, IL, TX, MI\")\n",
     "], [\"Grupa\", \"Widoczność\"]))"
    ]
   },
