Feature: Dodanie sekcji JOIN i Shuffle optimization
DZIEN_1 - 03_transformations_sql_pyspark.ipynb:
- Nowa Sekcja 6: JOIN - Łączenie danych z wielu źródeł
- INNER, LEFT, LEFT ANTI, LEFT SEMI JOIN
- JOIN z agregacją (analiza biznesowa)
- Różne warunki JOIN (wyrażenia, listy, wiele warunków)
- Porównanie PySpark vs SQL dla każdego typu

DZIEN_2 - 04_optimization_best_practices.ipynb:
- Nowa Sekcja 2b: JOIN Optimization i Shuffle
- Broadcast JOIN vs SortMerge JOIN
- Konfiguracja broadcast threshold
- Repartition vs Coalesce
- Repartition BY column dla collocated JOIN
- Shuffle Partitions + AQE configuration

--- a/DZIEN_1_Fundamentals_Exploration/03_transformations_sql_pyspark.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/03_transformations_sql_pyspark.ipynb
@@ -3601,6 +3601,382 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 6: JOIN - Łączenie danych z wielu źródeł\n",
+    "\n",
+    "**Cel sekcji:** Nauka łączenia DataFrames (JOIN) w PySpark i Spark SQL.\n",
+    "\n",
+    "**Typy JOIN:**\n",
+    "\n",
+    "| Typ | Opis | Przypadek użycia |\n",
+    "|-----|------|------------------|\n",
+    "| **INNER** | Tylko dopasowane rekordy | Standardowe łączenie tabel |\n",
+    "| **LEFT (OUTER)** | Wszystko z lewej + dopasowane z prawej | Zachowanie wszystkich rekordów głównej tabeli |\n",
+    "| **RIGHT (OUTER)** | Wszystko z prawej + dopasowane z lewej | Rzadko używane |\n",
+    "| **FULL (OUTER)** | Wszystkie rekordy z obu stron | Wykrywanie niezgodności |\n",
+    "| **CROSS** | Iloczyn kartezjański | Generowanie kombinacji |\n",
+    "| **LEFT ANTI** | Rekordy z lewej bez dopasowania | \"NOT IN\" - znajdź brakujące |\n",
+    "| **LEFT SEMI** | Rekordy z lewej z dopasowaniem | \"EXISTS\" - sprawdź istnienie |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.1: Przygotowanie danych do JOIN\n",
+    "\n",
+    "Najpierw wczytamy dodatkowe dane (orders), żeby mieć co łączyć z customers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wczytaj orders (JSON)\n",
+    "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "df_orders = spark.read.json(ORDERS_JSON)\n",
+    "\n",
+    "# Zarejestruj jako temp view\n",
+    "df_orders.createOrReplaceTempView(\"orders\")\n",
+    "\n",
+    "print(f\"✓ Orders: {df_orders.count()} rekordów\")\n",
+    "print(f\"✓ Customers: {df_customers.count()} rekordów\")\n",
+    "print(f\"\\nOrders schema:\")\n",
+    "df_orders.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.2: INNER JOIN - PySpark vs SQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INNER JOIN - PySpark DataFrame API\n",
+    "# Zamówienia z danymi klientów\n",
+    "\n",
+    "# Sposób 1: Join po wspólnej nazwie kolumny\n",
+    "inner_join_pyspark = df_orders.join(\n",
+    "    df_customers,\n",
+    "    \"customer_id\",  # Wspólna kolumna\n",
+    "    \"inner\"\n",
+    ").select(\n",
+    "    df_orders.order_id,\n",
+    "    df_orders.customer_id,\n",
+    "    df_customers.first_name,\n",
+    "    df_customers.last_name,\n",
+    "    df_customers.customer_segment,\n",
+    "    df_orders.total_amount\n",
+    ")\n",
+    "\n",
+    "print(\"INNER JOIN (PySpark):\")\n",
+    "inner_join_pyspark.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To samo w Spark SQL:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INNER JOIN - Spark SQL\n",
+    "inner_join_sql = spark.sql(\"\"\"\n",
+    "    SELECT \n",
+    "        o.order_id,\n",
+    "        o.customer_id,\n",
+    "        c.first_name,\n",
+    "        c.last_name,\n",
+    "        c.customer_segment,\n",
+    "        o.total_amount\n",
+    "    FROM orders o\n",
+    "    INNER JOIN customers c ON o.customer_id = c.customer_id\n",
+    "    LIMIT 5\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"INNER JOIN (SQL):\")\n",
+    "inner_join_sql.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.3: LEFT JOIN - zachowanie wszystkich klientów"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LEFT JOIN - wszystkich klientów, nawet bez zamówień\n",
+    "# PySpark\n",
+    "left_join = df_customers.join(\n",
+    "    df_orders,\n",
+    "    \"customer_id\",\n",
+    "    \"left\"  # lub \"left_outer\"\n",
+    ").select(\n",
+    "    df_customers.customer_id,\n",
+    "    df_customers.first_name,\n",
+    "    df_customers.customer_segment,\n",
+    "    df_orders.order_id,\n",
+    "    df_orders.total_amount\n",
+    ")\n",
+    "\n",
+    "print(\"LEFT JOIN - wszyscy klienci (z zamówieniami lub bez):\")\n",
+    "left_join.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź klientów BEZ zamówień (NULL w order_id):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Znajdź klientów bez zamówień\n",
+    "customers_without_orders = left_join.filter(F.col(\"order_id\").isNull())\n",
+    "\n",
+    "print(f\"Klienci bez zamówień: {customers_without_orders.count()}\")\n",
+    "customers_without_orders.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.4: LEFT ANTI JOIN - \"NOT IN\" pattern\n",
+    "\n",
+    "LEFT ANTI zwraca rekordy z lewej tabeli, które NIE mają dopasowania w prawej:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LEFT ANTI JOIN - klienci którzy NIE mają zamówień\n",
+    "# PySpark\n",
+    "anti_join = df_customers.join(\n",
+    "    df_orders,\n",
+    "    \"customer_id\",\n",
+    "    \"left_anti\"  # Tylko rekordy z lewej BEZ dopasowania w prawej\n",
+    ")\n",
+    "\n",
+    "print(f\"Klienci BEZ zamówień (LEFT ANTI): {anti_join.count()}\")\n",
+    "anti_join.select(\"customer_id\", \"first_name\", \"last_name\", \"customer_segment\").show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To samo w SQL (NOT EXISTS):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL equivalent - LEFT ANTI jako NOT EXISTS\n",
+    "anti_join_sql = spark.sql(\"\"\"\n",
+    "    SELECT c.customer_id, c.first_name, c.last_name, c.customer_segment\n",
+    "    FROM customers c\n",
+    "    WHERE NOT EXISTS (\n",
+    "        SELECT 1 FROM orders o WHERE o.customer_id = c.customer_id\n",
+    "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "print(f\"Klienci BEZ zamówień (SQL NOT EXISTS): {anti_join_sql.count()}\")\n",
+    "anti_join_sql.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.5: LEFT SEMI JOIN - \"EXISTS\" pattern\n",
+    "\n",
+    "LEFT SEMI zwraca rekordy z lewej tabeli, które MAJĄ dopasowanie w prawej (ale bez kolumn z prawej):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LEFT SEMI JOIN - klienci którzy MAJĄ zamówienia\n",
+    "# Zwraca tylko kolumny z lewej tabeli (customers)\n",
+    "semi_join = df_customers.join(\n",
+    "    df_orders,\n",
+    "    \"customer_id\",\n",
+    "    \"left_semi\"  # Tylko rekordy z lewej Z dopasowaniem w prawej\n",
+    ")\n",
+    "\n",
+    "print(f\"Klienci Z zamówieniami (LEFT SEMI): {semi_join.count()}\")\n",
+    "semi_join.select(\"customer_id\", \"first_name\", \"last_name\", \"customer_segment\").show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.6: JOIN z agregacją - analiza biznesowa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analiza: Suma zamówień per segment klienta\n",
+    "# Łączymy JOIN z agregacją\n",
+    "\n",
+    "# PySpark\n",
+    "segment_analysis = df_orders.join(\n",
+    "    df_customers,\n",
+    "    \"customer_id\",\n",
+    "    \"inner\"\n",
+    ").groupBy(\n",
+    "    df_customers.customer_segment\n",
+    ").agg(\n",
+    "    F.count(\"order_id\").alias(\"order_count\"),\n",
+    "    F.sum(\"total_amount\").alias(\"total_revenue\"),\n",
+    "    F.avg(\"total_amount\").alias(\"avg_order_value\"),\n",
+    "    F.countDistinct(\"customer_id\").alias(\"unique_customers\")\n",
+    ").orderBy(F.desc(\"total_revenue\"))\n",
+    "\n",
+    "print(\"Analiza zamówień per segment klienta:\")\n",
+    "segment_analysis.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To samo w SQL:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL version\n",
+    "segment_analysis_sql = spark.sql(\"\"\"\n",
+    "    SELECT \n",
+    "        c.customer_segment,\n",
+    "        COUNT(o.order_id) as order_count,\n",
+    "        SUM(o.total_amount) as total_revenue,\n",
+    "        AVG(o.total_amount) as avg_order_value,\n",
+    "        COUNT(DISTINCT o.customer_id) as unique_customers\n",
+    "    FROM orders o\n",
+    "    INNER JOIN customers c ON o.customer_id = c.customer_id\n",
+    "    GROUP BY c.customer_segment\n",
+    "    ORDER BY total_revenue DESC\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"Analiza zamówień per segment (SQL):\")\n",
+    "segment_analysis_sql.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 6.7: Warunki JOIN - różne kolumny\n",
+    "\n",
+    "Gdy nazwy kolumn są różne w obu tabelach:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gdy kolumny mają RÓŻNE nazwy - użyj wyrażenia\n",
+    "# Przykład: gdyby orders miał \"cust_id\" zamiast \"customer_id\"\n",
+    "\n",
+    "# Sposób 1: Wyrażenie warunkowe\n",
+    "join_different_cols = df_orders.join(\n",
+    "    df_customers,\n",
+    "    df_orders.customer_id == df_customers.customer_id,  # Jawne porównanie\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "# Sposób 2: Lista kolumn (gdy nazwy identyczne)\n",
+    "join_same_cols = df_orders.join(\n",
+    "    df_customers,\n",
+    "    [\"customer_id\"],  # Lista wspólnych kolumn\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "# Sposób 3: Wiele warunków JOIN\n",
+    "join_multi_condition = df_orders.join(\n",
+    "    df_customers,\n",
+    "    (df_orders.customer_id == df_customers.customer_id) & \n",
+    "    (df_orders.total_amount > 0),  # Dodatkowy warunek\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "print(f\"Join z wyrażeniem: {join_different_cols.count()} rekordów\")\n",
+    "print(f\"Join z listą kolumn: {join_same_cols.count()} rekordów\")\n",
+    "print(f\"Join z wieloma warunkami: {join_multi_condition.count()} rekordów\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📊 Podsumowanie JOIN\n",
+    "\n",
+    "| Typ JOIN | PySpark | SQL | Przypadek użycia |\n",
+    "|----------|---------|-----|------------------|\n",
+    "| **INNER** | `df1.join(df2, \"key\", \"inner\")` | `FROM t1 JOIN t2 ON ...` | Tylko dopasowane |\n",
+    "| **LEFT** | `df1.join(df2, \"key\", \"left\")` | `FROM t1 LEFT JOIN t2 ON ...` | Wszystko z lewej |\n",
+    "| **LEFT ANTI** | `df1.join(df2, \"key\", \"left_anti\")` | `WHERE NOT EXISTS` | Brakujące rekordy |\n",
+    "| **LEFT SEMI** | `df1.join(df2, \"key\", \"left_semi\")` | `WHERE EXISTS` | Sprawdzenie istnienia |\n",
+    "| **CROSS** | `df1.crossJoin(df2)` | `FROM t1 CROSS JOIN t2` | Iloczyn kartezjański |\n",
+    "\n",
+    "> **💡 Tip:** Dla optymalizacji JOIN z małą tabelą użyj `broadcast()`:\n",
+    "> ```python\n",
+    "> from pyspark.sql.functions import broadcast\n",
+    "> df_large.join(broadcast(df_small), \"key\")\n",
+    "> ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
