--- a/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
@@ -702,6 +702,310 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 2b: JOIN Optimization i Shuffle\n",
+    "\n",
+    "**Cel sekcji:** Optymalizacja operacji JOIN i minimalizacja kosztownych shuffle operations.\n",
+    "\n",
+    "**Teoria - Typy JOIN w Spark:**\n",
+    "\n",
+    "| Typ JOIN | Kiedy używany | Charakterystyka |\n",
+    "|----------|---------------|-----------------|\n",
+    "| **Broadcast Hash Join** | Jedna tabela < 10MB (domyślnie) | Najszybszy - mała tabela kopiowana do wszystkich executorów |\n",
+    "| **Sort Merge Join** | Obie tabele duże | Wymaga shuffle i sortowania obu stron |\n",
+    "| **Shuffle Hash Join** | Średnie tabele | Shuffle bez sortowania |\n",
+    "\n",
+    "**Shuffle - co to jest?**\n",
+    "- Wymiana danych między executorami (przez sieć)\n",
+    "- Najdroższa operacja w Spark (I/O, network, serialization)\n",
+    "- Powoduje \"stage boundaries\" w DAG\n",
+    "\n",
+    "**Jak minimalizować shuffle:**\n",
+    "1. **Broadcast JOIN** - dla małych tabel (< 10MB, można zwiększyć do 100MB)\n",
+    "2. **Repartition** przed JOIN - wyrównanie partycji\n",
+    "3. **Colocated JOIN** - dane już na tych samych partycjach\n",
+    "4. **Bucketing** - pre-partycjonowanie tabel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 2b.1: Broadcast JOIN - optymalizacja dla małych tabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 2b.1 - Broadcast JOIN\n",
+    "\n",
+    "from pyspark.sql.functions import broadcast\n",
+    "\n",
+    "# Wczytaj tabele do JOIN\n",
+    "orders_df = spark.table(ORDERS_OPT)\n",
+    "customers_df = spark.table(CUSTOMERS_OPT)\n",
+    "\n",
+    "print(f\"Orders: {orders_df.count()} rekordów\")\n",
+    "print(f\"Customers: {customers_df.count()} rekordów (mała tabela - kandydat do broadcast)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Standardowy JOIN (bez broadcast) - wymaga shuffle:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardowy JOIN - Spark sam zdecyduje o strategii\n",
+    "standard_join = orders_df.join(\n",
+    "    customers_df,\n",
+    "    orders_df.customer_id == customers_df.customer_id,\n",
+    "    \"inner\"\n",
+    ").select(\n",
+    "    orders_df.order_id,\n",
+    "    orders_df.total_amount,\n",
+    "    customers_df.first_name,\n",
+    "    customers_df.customer_segment\n",
+    ")\n",
+    "\n",
+    "# Sprawdź plan - szukaj \"SortMergeJoin\" lub \"BroadcastHashJoin\"\n",
+    "standard_join.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Wymuszony Broadcast JOIN - eliminuje shuffle:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wymuszony Broadcast JOIN - mała tabela (customers) kopiowana do wszystkich executorów\n",
+    "broadcast_join = orders_df.join(\n",
+    "    broadcast(customers_df),  # Wymuszamy broadcast mniejszej tabeli\n",
+    "    orders_df.customer_id == customers_df.customer_id,\n",
+    "    \"inner\"\n",
+    ").select(\n",
+    "    orders_df.order_id,\n",
+    "    orders_df.total_amount,\n",
+    "    customers_df.first_name,\n",
+    "    customers_df.customer_segment\n",
+    ")\n",
+    "\n",
+    "# Sprawdź plan - powinien pokazać \"BroadcastHashJoin\"\n",
+    "broadcast_join.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 W planie szukaj:**\n",
+    "- `BroadcastHashJoin` - broadcast join (brak shuffle!)\n",
+    "- `SortMergeJoin` - sort merge join (wymaga shuffle obu stron)\n",
+    "- `BroadcastExchange` - kopiowanie małej tabeli do executorów\n",
+    "- `ShuffleExchange` - shuffle (kosztowna operacja!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 2b.2: Konfiguracja Broadcast Threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sprawdź aktualny próg broadcast (domyślnie 10MB)\n",
+    "current_threshold = spark.conf.get(\"spark.sql.autoBroadcastJoinThreshold\")\n",
+    "print(f\"Aktualny broadcast threshold: {current_threshold} bytes ({int(current_threshold)/(1024*1024):.0f} MB)\")\n",
+    "\n",
+    "# Możesz zwiększyć próg dla większych tabel \"lookup\"\n",
+    "# spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", 100 * 1024 * 1024)  # 100MB\n",
+    "\n",
+    "# Lub wyłączyć auto-broadcast (wymusza SortMergeJoin)\n",
+    "# spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 2b.3: Repartition vs Coalesce - kontrola shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repartition vs Coalesce - różnice\n",
+    "\n",
+    "# REPARTITION - pełny shuffle, równomierny rozkład danych\n",
+    "# Użyj gdy: potrzebujesz więcej partycji LUB równomiernego rozkładu\n",
+    "orders_repartitioned = orders_df.repartition(10)\n",
+    "print(f\"Po repartition(10): {orders_repartitioned.rdd.getNumPartitions()} partycji\")\n",
+    "\n",
+    "# COALESCE - bez shuffle, tylko łączenie partycji (narrow transformation)\n",
+    "# Użyj gdy: zmniejszasz liczbę partycji (np. przed zapisem)\n",
+    "orders_coalesced = orders_df.coalesce(4)\n",
+    "print(f\"Po coalesce(4): {orders_coalesced.rdd.getNumPartitions()} partycji\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Repartition BY kolumna - optymalizacja dla JOIN:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repartition BY join key - dane z tym samym kluczem trafiają do tej samej partycji\n",
+    "# To minimalizuje shuffle podczas JOIN (collocated data)\n",
+    "\n",
+    "orders_by_customer = orders_df.repartition(10, \"customer_id\")\n",
+    "customers_by_id = customers_df.repartition(10, \"customer_id\")\n",
+    "\n",
+    "# Teraz JOIN będzie szybszy - dane już są na tych samych partycjach\n",
+    "optimized_join = orders_by_customer.join(\n",
+    "    customers_by_id,\n",
+    "    \"customer_id\",  # Wspólna kolumna partycjonowania\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "print(\"✓ Dane przepartycjonowane po customer_id - JOIN będzie szybszy\")\n",
+    "optimized_join.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 2b.4: Porównanie wydajności JOIN\n",
+    "\n",
+    "**Teoria - kiedy używać którego typu JOIN:**\n",
+    "\n",
+    "| Scenariusz | Rekomendacja |\n",
+    "|------------|--------------|\n",
+    "| Mała tabela lookup (< 10MB) | `broadcast(small_df)` |\n",
+    "| Mała tabela lookup (10-100MB) | Zwiększ `autoBroadcastJoinThreshold` |\n",
+    "| Obie tabele duże | SortMergeJoin (domyślny) + pre-repartition |\n",
+    "| Częste JOIN na tym samym kluczu | Bucketing (przy tworzeniu tabeli) |\n",
+    "| Skewed data (nierównomierny rozkład) | Salting lub AQE (Adaptive Query Execution) |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Porównanie wydajności: Broadcast vs SortMerge JOIN\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "# Test 1: Broadcast JOIN\n",
+    "start_broadcast = time.time()\n",
+    "result_broadcast = orders_df.join(\n",
+    "    broadcast(customers_df),\n",
+    "    orders_df.customer_id == customers_df.customer_id\n",
+    ").count()\n",
+    "time_broadcast = time.time() - start_broadcast\n",
+    "\n",
+    "# Test 2: Wyłączony broadcast (wymusza SortMergeJoin)\n",
+    "spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", -1)\n",
+    "\n",
+    "start_sortmerge = time.time()\n",
+    "result_sortmerge = orders_df.join(\n",
+    "    customers_df,\n",
+    "    orders_df.customer_id == customers_df.customer_id\n",
+    ").count()\n",
+    "time_sortmerge = time.time() - start_sortmerge\n",
+    "\n",
+    "# Przywróć domyślne ustawienie\n",
+    "spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", 10 * 1024 * 1024)\n",
+    "\n",
+    "# Wyniki\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Broadcast JOIN\", f\"{time_broadcast:.2f}s\", \"✅ Szybki (bez shuffle)\"),\n",
+    "    (\"SortMerge JOIN\", f\"{time_sortmerge:.2f}s\", \"⚠️ Wolniejszy (wymaga shuffle)\")\n",
+    "], [\"Typ JOIN\", \"Czas\", \"Uwagi\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 2b.5: Shuffle Partitions - konfiguracja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shuffle Partitions - kontrola liczby partycji po shuffle\n",
+    "\n",
+    "# Sprawdź aktualną wartość (domyślnie 200)\n",
+    "current_partitions = spark.conf.get(\"spark.sql.shuffle.partitions\")\n",
+    "print(f\"Aktualne shuffle.partitions: {current_partitions}\")\n",
+    "\n",
+    "# Dla małych danych (< 1GB) - zmniejsz liczbę partycji\n",
+    "# spark.conf.set(\"spark.sql.shuffle.partitions\", 10)\n",
+    "\n",
+    "# Dla dużych danych (> 100GB) - zwiększ\n",
+    "# spark.conf.set(\"spark.sql.shuffle.partitions\", 500)\n",
+    "\n",
+    "# Najlepsza praktyka: Adaptive Query Execution (AQE) automatycznie optymalizuje\n",
+    "print(f\"AQE enabled: {spark.conf.get('spark.sql.adaptive.enabled')}\")\n",
+    "print(f\"AQE coalesce partitions: {spark.conf.get('spark.sql.adaptive.coalescePartitions.enabled')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**📊 Podsumowanie optymalizacji JOIN i Shuffle:**\n",
+    "\n",
+    "| Technika | Kiedy używać | Korzyść |\n",
+    "|----------|--------------|---------|\n",
+    "| `broadcast(df)` | Mała tabela < 100MB | Eliminuje shuffle |\n",
+    "| `repartition(n, col)` | Przed JOIN na dużych tabelach | Collocated data |\n",
+    "| `coalesce(n)` | Zmniejszenie partycji przed zapisem | Bez shuffle |\n",
+    "| `shuffle.partitions` | Dostosowanie do rozmiaru danych | Optymalna parallelizacja |\n",
+    "| AQE (Adaptive) | Zawsze włączone (domyślnie) | Auto-optymalizacja |\n",
+    "\n",
+    "> **💡 Best Practice:** W Databricks Runtime 14+ AQE jest domyślnie włączone i automatycznie optymalizuje shuffle partitions, broadcast thresholds i skewed joins."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
